--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -14,21 +14,37 @@ body,
 }
 
 body {
-    // width: 100%;
-    // margin: 0 auto;
-    // font-size: 16px;
-    // line-height: 1.5;
-    // -webkit-font-smoothing: antialiased;
+    font-family: 'Work Sans', sans-serif;
+    font-size: 20px;
+    width: 100%;
+    margin: 0 auto;
 
-    // * {
-    //     box-sizing: border-box;
+    line-height: 1.5;
+    -webkit-font-smoothing: antialiased;
 
-    //     &::selection {
-    //         background: yellow;
-    //     }
-    // }
+    * {
+        box-sizing: border-box;
+
+        &::selection {
+            background: yellow;
+        }
+    }
 
     img {
         width: 100%;
+    }
+
+    h1 {
+        font-family: "Work Sans";
+        font-weight: 600;
+
+        @media (max-width: 840px) {
+            font-size: 24px;
+        }
+    }
+
+    h5 {
+        font-weight: 500;
+        font-size: 1.2em;
     }
 }
